# CSC4526-JIN4

./: .gitignore  CMakeLists.txt  README.md
diag_UML/: diag_UML_vf.drawio
resources/: mainmenu_tileset.piskel  tileset.piskel
src/core/: CMakeLists.txt  Cyrano.cpp  Cyrano.h  Dog.cpp  Drawable.h  Enemy.cpp  Enemy.h  Entity.h  FirearmSoldier.cpp  FirearmSoldier.h  HorseSoldier.cpp  Serializable.h  Terrain.cpp  Terrain.h  Tile.cpp  Tile.h  common.h  myMain.cpp  terrain.cpp  terrain.h
src/core/Game/: Game.cpp  Game.h
src/core/Graphics/: ResourceManager.cpp  ResourceManager.h
src/core/building/: Archer.cpp  Archer.h  Building.cpp  Building.h  BuildingManager.cpp  BuildingManager.h  Canon.cpp  Canon.h  Post.cpp  Post.h
src/core/enemy/: Attack.cpp  Attack.h  Cyrano.cpp  Cyrano.h  Dog.cpp  Dog.h  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  FirearmSoldier.cpp  FirearmSoldier.h  HorseSoldier.cpp  HorseSoldier.h  Kamikaze.cpp  Kamikaze.h  MeleeSoldier.cpp  MeleeSoldier.h
src/core/map/: BeginPath.cpp  BeginPath.h  Dog.h  EndPath.cpp  EndPath.h  Enemy.cpp  FirearmSoldier.h  Ground.cpp  Ground.h  HorseSoldier.h  Kamikaze.cpp  MeleeSoldier.h  Path.cpp  Path.h  Terrain.cpp  Terrain.h  Tile.cpp  Tile.h
src/core/views/: DifficultyMenu.cpp  DifficultyMenu.h  Game.cpp  Game.h  GameMenu.cpp  GameMenu.h  LoseMenu.cpp  LoseMenu.h  MainMenu.cpp  MainMenu.h  View.cpp  View.h  ViewManager.cpp  ViewManager.h  ViewManger.h
src/main/: CMakeLists.txt
src/test/: CMakeLists.txt  unitTests.cpp
